Added margins and padding

--- a/favorite-band/css/styles.css
+++ b/favorite-band/css/styles.css
@@ -4,12 +4,16 @@ body {
 
 img {
   float: left;
+  padding: 50px;
 }
 
 .sidebar {
   width: 30%;
   float: right;
   background-color: white;
+  margin: 12px;
+  border: 2px solid green;
+  padding: 4px;
 }
 
 .text {
