Changed styling and text

--- a/animal-shelter/css/style.css
+++ b/animal-shelter/css/style.css
@@ -3,18 +3,18 @@ img.flip {
   padding: 50px;
 
 }
+
 img.flippie {
   transform: rotate(180deg);
   padding: 50px;
 
 }
 
-.column p {
-  width: 300px;
+.column {
+  width: 33%;
   float:left;
   }
 
-.intro h1 p h2 {
-  color: purple;
-
+.column p img{
+  display: block;
 }
